--- a/app/src/main/res/layout/edit_data_layout.xml
+++ b/app/src/main/res/layout/edit_data_layout.xml
@@ -14,14 +14,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="292dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="password"
+        android:text="Name "
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/passwordApp"
-        app:layout_constraintStart_toStartOf="@+id/passwordApp"
-        app:layout_constraintTop_toBottomOf="@+id/passwordApp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.439"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_centerHorizontal="true"
@@ -40,12 +41,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="304dp"
         android:layout_toRightOf="@+id/btnDelete"
         android:text="SAVE"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/editable_item"
-        app:layout_constraintTop_toBottomOf="@+id/editable_item"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintEnd_toEndOf="@+id/passwordApp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/passwordApp"
+        app:layout_constraintTop_toBottomOf="@+id/passwordApp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/passwordApp"
@@ -55,14 +59,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="164dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="password"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/editable_item"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/editable_item"
+        app:layout_constraintTop_toBottomOf="@+id/editable_item" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -72,12 +76,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="300dp"
         android:text="DELETE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnSave"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editable_item"
-        app:layout_constraintTop_toBottomOf="@+id/editable_item"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintStart_toStartOf="@+id/passwordApp"
+        app:layout_constraintTop_toBottomOf="@+id/passwordApp"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
